# FITAPP

./: Cargo.toml  README.md
.github/workflows/: main.yml
src/: app.rs  main.rs  models.rs  muscles.rs  tools.rs  ui.rs
